[package]
name = "procession"
version = "0.1.0"
edition = "2021"
default-run = "procession"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.15"
clap = { version = "3.2.17", features = ["derive", "cargo"] }
error-stack = { version = "0.2.4", features = ["spantrace"] }
redis = { version = "0.21.5", features = ["tokio-comp", "connection-manager", "aio"] }
serde = { version = "1.0.143", features = ["derive"] }
tokio = { version = "1.20.1", features = ["full"] }
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.15", features = ["fmt"] }

[dev-dependencies]
assert_matches = "1.5.0"
procession-client = { path = "../client/rs" }
proptest = "1.0.0"
