[package]
name = "procession-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.2.1"
reqwest = { version = "0.11.11", features = ["json", "rustls-tls-native-roots"] }
thiserror = "1.0.32"
url = "2.2.2"
